# solana-arb

./: .env.example  .gitignore  Cargo.toml  README.md
crates/arb-api/: Cargo.toml
crates/arb-api/src/: lib.rs
crates/arb-cli/: Cargo.toml
crates/arb-cli/src/: main.rs  system_manager.rs
crates/arb-detect/: Cargo.toml
crates/arb-detect/src/: detector.rs  graph.rs  lib.rs  swap_analyzer.rs  volume_tracker.rs
crates/arb-feed/: Cargo.toml
crates/arb-feed/src/: dexscreener.rs  discovery.rs  forge_feed.rs  lib.rs  poller.rs  pool_decoder.rs  pool_discovery.rs  pool_monitor.rs  rugcheck.rs  whale_tracker.rs
crates/arb-sim/: Cargo.toml
crates/arb-sim/src/: amm_quoter.rs  atomic.rs  cost_model.rs  jito.rs  jupiter_quote.rs  lib.rs  local_scanner.rs  observation.rs  pool_cache.rs  scanner.rs  simulator.rs  tx_builder.rs
crates/arb-store/: Cargo.toml
crates/arb-store/src/: lib.rs  queries.rs
crates/arb-types/: Cargo.toml
crates/arb-types/src/: lib.rs
migrations/: 001_schema.sql  002_swap_signals.sql  003_token_safety.sql  004_executions.sql  005_observations.sql
public/: index.html
