[package]
name = "arb-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arb-types = { path = "../arb-types" }
arb-store = { path = "../arb-store" }
axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
