[package]
name = "arb-feed"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arb-types = { path = "../arb-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
