[package]
name = "arb-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arb-types = { path = "../arb-types" }
arb-feed = { path = "../arb-feed" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
