[package]
name = "arb-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arb-types = { path = "../arb-types" }
sqlx = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
